# deepclaude

./: .gitignore  README.md  README_EN.md  pyproject.toml
docs/plans/: 2026-04-08-deepclaude-design.md  2026-04-08-deepclaude-implementation.md
skills/deepclaude-backtest/: SKILL.md
skills/deepclaude-report/: SKILL.md
skills/deepclaude-sdk/: SKILL.md
src/deepclaude/: __init__.py  __main__.py  backtest.py  config.py  data.py  logger.py  operators.py  orchestrator.py  prompt_template.md  registry.py
tests/: conftest.py  test_backtest.py  test_data.py  test_integration.py  test_logger.py  test_operators.py  test_orchestrator.py  test_registry.py
